<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:lineSpacingExtra="12sp"
                    android:paddingStart="0dp"
                    android:paddingEnd="100dp"
                    android:text="@string/name_label"
                    android:textColor="#2196F3"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="#151515"
                    android:textSize="18sp"
                    tools:text="Palak Chanana" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="0dp"
                    android:paddingEnd="60dp"
                    android:text="@string/age_label"
                    android:textColor="#2196F3"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/agegroupTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="#0E0E0E"
                    android:textSize="18sp"
                    tools:text="15-18" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="40dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stat_label"
                    android:textColor="#2196F3"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="6dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/City"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingStart="0dp"
                            android:paddingTop="8dp"
                            android:paddingEnd="50dp"
                            android:text="@string/city"
                            android:textColor="#2196F3"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/cityTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="0dp"
                            android:layout_marginEnd="55dp"
                            android:paddingTop="8dp"
                            android:textColor="#100F0F"
                            android:textSize="18sp"
                            tools:text="16" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="6dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingStart="0dp"
                            android:paddingTop="8dp"
                            android:paddingEnd="50dp"
                            android:text="@string/hobby"
                            android:textColor="#2196F3"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/hobbyTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="0dp"
                            android:paddingTop="8dp"
                            android:textColor="#090808"
                            android:textSize="18sp"
                            tools:text="16" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="6dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingStart="0dp"
                            android:paddingTop="8dp"
                            android:paddingEnd="25dp"
                            android:text="@string/pno_label"
                            android:textColor="#2196F3"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/pnoTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginTop="0dp"
                            android:layout_marginEnd="8dp"
                            android:paddingTop="8dp"
                            android:textColor="#101010"
                            android:textSize="18sp"
                            tools:text="16" />
                    </LinearLayout>
                </LinearLayout>
                <Button
                    android:id="@+id/generateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/button_label"
                    android:textColor="#101010"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>